src/include/iecode/ffi.h

/// Libere un buffer alloue par iecode.
IECODE_EXPORT void iecode_free(void* ptr);
// ── Game Database ───────────────────────────────────────────────────

/// Handle opaque pour une GameDatabase chargee.
typedef struct iecode_gamedb iecode_gamedb_t;
/// Charge une base de donnees complete du jeu.
/// @param data_root chemin vers la racine des donnees (contient common/gamedata/, common/text/)
/// @param load_text si != 0, charge les textes localises (9 locales, plus lent)
/// @return handle, ou NULL. Liberer avec iecode_gamedb_free().
IECODE_EXPORT iecode_gamedb_t* iecode_gamedb_load(const char* data_root, int load_text);
/// Nombre de personnages.
IECODE_EXPORT int32_t iecode_gamedb_chara_count(const iecode_gamedb_t* db);
/// Nombre de skills.
IECODE_EXPORT int32_t iecode_gamedb_skill_count(const iecode_gamedb_t* db);
/// Nombre d'equipes.
IECODE_EXPORT int32_t iecode_gamedb_team_count(const iecode_gamedb_t* db);
/// JSON complet de la base (cache, ne pas liberer).
IECODE_EXPORT const char* iecode_gamedb_json(const iecode_gamedb_t* db);
/// JSON d'un personnage par index.
IECODE_EXPORT const char* iecode_gamedb_chara_json(const iecode_gamedb_t* db, int32_t idx);
/// JSON d'un skill par index.
IECODE_EXPORT const char* iecode_gamedb_skill_json(const iecode_gamedb_t* db, int32_t idx);
/// Cherche un personnage par charaParamId ("0xABCD1234").
/// Retourne l'index, ou -1 si non trouve.
IECODE_EXPORT int32_t iecode_gamedb_find_chara(const iecode_gamedb_t* db, const char* chara_param_id);
/// Cherche un skill par skillId.
IECODE_EXPORT int32_t iecode_gamedb_find_skill(const iecode_gamedb_t* db, const char* skill_id);
/// Libere la base de donnees.
IECODE_EXPORT void iecode_gamedb_free(iecode_gamedb_t* db);
// ── Batch conversion ────────────────────────────────────────────────

/// Convertit tous les G4TX d'un dossier en PNG/WebP/DDS.
/// @param input_dir dossier source
/// @param output_dir dossier destination
/// @param format "png", "webp", ou "dds"
/// @param threads nombre de threads (0 = auto)
/// @param recursive 1 = recherche recursive
/// @param flat 1 = sortie a plat (pas de sous-dossiers)
/// @return nombre de fichiers convertis
IECODE_EXPORT int32_t iecode_batch_convert(const char* input_dir,
                                            const char* output_dir,
                                            const char* format,
                                            int32_t threads,
                                            int recursive,
                                            int flat);
// ── Format detection ───────────────────────────────────────────────

/// Detecte le format d'un fichier a partir de ses magic bytes.
/// Retourne un nom lisible ("CPK", "G4TX", "RDBN", etc.) ou "Unknown".
/// Le buffer retourne est alloue par iecode. Liberer avec iecode_free().
IECODE_EXPORT const char* iecode_detect_format(const uint8_t* data, uint32_t size);
// ── FNT (font) ─────────────────────────────────────────────────────

/// Retourne les metadonnees d'un fichier FNT en JSON.
/// Le buffer retourne est alloue par iecode. Liberer avec iecode_free().
IECODE_EXPORT const char* iecode_fnt_info(const uint8_t* data, uint32_t size);
// ── ANMx (animation) ──────────────────────────────────────────────

/// Detecte si les donnees sont un fichier ANMx valide.
/// @return 1 si oui, 0 sinon.
IECODE_EXPORT int iecode_anm_is_valid(const uint8_t* data, uint32_t size);
/// Retourne les metadonnees ANMx en JSON.
/// Le buffer retourne est alloue par iecode. Liberer avec iecode_free().
IECODE_EXPORT const char* iecode_anm_info(const uint8_t* data, uint32_t size);
// ── EventText ──────────────────────────────────────────────────────

/// Extrait les textes evenementiels depuis un buffer cfg.bin brut.
/// Retourne un JSON array des entrees. Liberer avec iecode_free().
IECODE_EXPORT const char* iecode_event_text_extract(const uint8_t* data, uint32_t size);
// ── VFS (Virtual File System) ───────────────────────────────────────

/// Initialise le VFS depuis le dossier data/ du jeu.
/// Charge cpk_list.cfg.bin, dechiffre, parse, construit l'index.
/// @param game_data_dir chemin vers le dossier "data/" du jeu
/// @return handle opaque, ou NULL en cas d'erreur. Liberer avec iecode_vfs_shutdown().
IECODE_EXPORT void* iecode_vfs_init(const char* game_data_dir);
/// Ferme le VFS et libere toutes les ressources.
IECODE_EXPORT void iecode_vfs_shutdown(void* vfs);
/// Trouve quel CPK contient un asset.
/// @param vfs handle retourne par iecode_vfs_init()
/// @param path chemin interne (ex: "data/common/chr/.../file.g4md")
/// @param cpk_out buffer de sortie pour le nom du CPK
/// @param cpk_out_size taille du buffer cpk_out
/// @return taille du fichier (>0 si trouve), 0 si non trouve, -1 si erreur
IECODE_EXPORT int32_t iecode_vfs_find(void* vfs, const char* path,
                                       char* cpk_out, uint32_t cpk_out_size);
/// Lit un fichier directement depuis le bon CPK.
/// @param vfs handle retourne par iecode_vfs_init()
/// @param path chemin interne
/// @param out_size pointeur pour recevoir la taille des donnees
/// @return buffer alloue (liberer avec iecode_free()), ou NULL si erreur
IECODE_EXPORT uint8_t* iecode_vfs_read(void* vfs, const char* path,
                                        uint32_t* out_size);
/// Retourne le nombre d'assets indexes dans le VFS.
IECODE_EXPORT uint32_t iecode_vfs_asset_count(void* vfs);