cpp/ffi/rust/iecode-sys/src/lib.rs


    // ── FNT (font) ─────────────────────────────────────────────────

    /// Returns FNT metadata as JSON. Free with `iecode_free`.
    pub fn iecode_fnt_info(data: *const u8, size: u32) -> *const c_char;

    // ── ANMx (animation) ──────────────────────────────────────────

    /// Checks if data is a valid ANMx file. Returns 1/0.
    pub fn iecode_anm_is_valid(data: *const u8, size: u32) -> i32;

    /// Returns ANMx metadata as JSON. Free with `iecode_free`.
    pub fn iecode_anm_info(data: *const u8, size: u32) -> *const c_char;

    // ── EventText ──────────────────────────────────────────────────

    /// Extracts event texts from a raw cfg.bin buffer as a JSON array.
    /// Free with `iecode_free`.
    pub fn iecode_event_text_extract(data: *const u8, size: u32) -> *const c_char;

    // ── Format detection ───────────────────────────────────────────

    /// Detects file format from magic bytes.
    /// Returns a readable name ("CPK", "G4TX", "RDBN", etc.) or "Unknown".
    /// Free with `iecode_free`.
    pub fn iecode_detect_format(data: *const u8, size: u32) -> *const c_char;

    // ── Game Database ──────────────────────────────────────────────

    /// Loads a complete game database.
    /// `load_text` != 0 loads localised text (slower). Free with `iecode_gamedb_free`.
    pub fn iecode_gamedb_load(
        data_root: *const c_char,
        load_text: i32,
    ) -> *mut IecodeGameDb;

    /// Returns the number of characters in the database.
    pub fn iecode_gamedb_chara_count(db: *const IecodeGameDb) -> i32;

    /// Returns the number of skills in the database.
    pub fn iecode_gamedb_skill_count(db: *const IecodeGameDb) -> i32;

    /// Returns the number of teams in the database.
    pub fn iecode_gamedb_team_count(db: *const IecodeGameDb) -> i32;

    /// Returns the full database as JSON (cached, do not free).
    pub fn iecode_gamedb_json(db: *const IecodeGameDb) -> *const c_char;

    /// Returns JSON for a character by index (cached, do not free).
    pub fn iecode_gamedb_chara_json(db: *const IecodeGameDb, idx: i32) -> *const c_char;

    /// Returns JSON for a skill by index (cached, do not free).
    pub fn iecode_gamedb_skill_json(db: *const IecodeGameDb, idx: i32) -> *const c_char;

    /// Finds a character by charaParamId (e.g. "0xABCD1234"). Returns index, or -1.
    pub fn iecode_gamedb_find_chara(
        db: *const IecodeGameDb,
        chara_param_id: *const c_char,
    ) -> i32;

    /// Finds a skill by skillId. Returns index, or -1.
    pub fn iecode_gamedb_find_skill(
        db: *const IecodeGameDb,
        skill_id: *const c_char,
    ) -> i32;

    /// Frees a game database handle.
    pub fn iecode_gamedb_free(db: *mut IecodeGameDb);

    // ── Batch conversion ───────────────────────────────────────────

    /// Batch-converts all G4TX files in a directory to PNG/WebP/DDS.
    /// `threads` = 0 for auto. Returns the number of files converted.
    pub fn iecode_batch_convert(
        input_dir: *const c_char,
        output_dir: *const c_char,
        format: *const c_char,
        threads: i32,
        recursive: i32,
        flat: i32,
    ) -> i32;

    // ── VFS ────────────────────────────────────────────────────────

    /// Initializes the Virtual File System from the game data directory.
    pub fn iecode_vfs_init(game_data_dir: *const c_char) -> *mut c_void;

    /// Shuts down the Virtual File System.
    pub fn iecode_vfs_shutdown(vfs: *mut c_void);

    /// Finds an asset in the VFS.
    pub fn iecode_vfs_find(
        vfs: *mut c_void,
        path: *const c_char,
        out_cpk_name: *mut c_char,
        out_cpk_name_cap: usize,
    ) -> i32;

    /// Reads an asset from the VFS.
    pub fn iecode_vfs_read(
        vfs: *mut c_void,
        path: *const c_char,
        out_size: *mut u32,
    ) -> *mut u8;

    /// Gets the number of assets in the VFS.
    pub fn iecode_vfs_asset_count(vfs: *mut c_void) -> u32;

    // ── Simulation WASM (ievr_game) ──────────────────────────────────
    pub fn wasm_sim_kickoff() -> *mut c_void;
    pub fn wasm_sim_advance(match_ptr: *mut c_void, dt: f32);
    pub fn wasm_sim_read_state(match_ptr: *mut c_void, out_positions: *mut f32) -> i32;
    pub fn wasm_sim_free(match_ptr: *mut c_void);
}

